# python--zhangjia--homework3

./: .gitignore  01.Python_Introduction.ipynb  02.Python_snippets.ipynb  03.NumPy.ipynb  04.Pandas_Introduction.ipynb  05.Regular_Expressions.ipynb  requirements.txt
data/: currencies.csv  eur.csv
examples/: Cython.ipynb  JAX.ipynb  Joblib.ipynb  Threads.ipynb
examples/python_tools/: notes.ipynb  pyproject.toml  requirements.txt  setup.py
examples/python_tools/projectname/: add.py  mul.py
examples/python_tools/tests/projectname/: test_add.py  test_mul.py
tasks/: Task_3zhangjia.ipynb
