# Альтернатива #1: setuptools
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Альтернатива #2: poetry
# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# name = "projectname"
# version = "0.1.0"
# description = ""
# authors = ["Author Name"]
# readme = "README.md"
# packages = [{include = "projectname"}]

# [tool.poetry.dependencies]
# python = "^3.7"
# requests = ">=2.0.0"
# flask = ">=2.0.0"

# [tool.poetry.scripts]
# mul = 'projectname.mul:main'

[project]
name = "projectname"
version = "0.0.1"

authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask >= 2.0.0",
    "requests >= 2.0.0",
]

[project.urls]
"Homepage" = "https://apmath.spbu.ru"
"Bug Tracker" = "https://github.com/projectname"

[tool.isort]
profile = "black"
src_paths = ["projectname", "test"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true

[tool.ruff]
line-length = 88